# cryptexx

./: LICENSE  README.md  pyproject.toml
cryptexx/: ___init__.py  cryptexx.py  cryptlock.py
cryptexx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
