[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptexx"
version = "0.2.3"
description = "An encryption and decryption module."
authors = [{ name="Kevin Molnar" }]
readme = "README.md"
requires-python = ">=3.8"


[tool.setuptools.packages.find]
where = ["."]